--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+actix-web = { version = "3.3.2", features=["openssl"] }
+jsonwebtoken = "7.2.0"
+serde = { version = "1.0.130", features = ["derive"] }
